--- a/src/dump.jade
+++ b/src/dump.jade
@@ -9,6 +9,7 @@ html(lang='en-US')
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto")
     body
         h1 Hello
+        button.btn Button
         <!-- inject:js -->
         <!-- endinject -->
         script(src="/assets/js/main.js")
