--- a/src/assets/scss/components/home/header.scss
+++ b/src/assets/scss/components/home/header.scss
@@ -2,14 +2,12 @@
 @import "../../mixins.scss";
 .slogan-contact {
     background-color: #000;
-    color: red;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
     height: 60px;
-    background-color: $color-header-footer;
-    @media screen and (min-width: 780px) {
+    @media screen and (min-width: 768px) {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -21,12 +19,12 @@
     flex-basis: 100%;
     text-align: center;
     margin-bottom: 8px;
-    @media screen and (min-width: 780px) {
+    @media screen and (min-width: 768px) {
         flex-basis: auto;
         margin-bottom: 0;
     }
     @at-root #{&}__text {
-        color: $color-text-header-footer;
+        color: #fff;
     }
 }
 
