--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,10 @@
 @import "mixins.scss";
 @import "components/common/layout.scss";
+@import "components/common/suplements.scss";
 @import "components/home/header.scss";
+@import "components/home/nav.scss";
 @import "components/home/banner.scss";
+@import "components/home/box.scss";
+@import "components/home/services.scss";
+@import "components/home/news.scss";
+@import "components/home/ref-call.scss";
