--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -7,7 +7,8 @@ $color-text-content: #bcbcbcff;
 $color-text-header-footer:#fff;
 $font-size-mobile:14px;
 $font-size-desktop:16px;
-$color-header-footer:#000;
+$bg-color-header-footer:#000;
+$color-header-footer:#fff;
 $mediaConfig: ( tablet: 768px, desktop: 1200px, );
 @mixin colors($color: blue) {
     background-color: $color;
