--- a/src/assets/scss/components/home/banner.css
+++ b/src/assets/scss/components/home/banner.css
@@ -7,23 +7,21 @@
 
 .banner {
   position: relative;
+  height: 500px;
+  background-image: url(http://9mobi.vn/cf/images/2015/03/nkk/hinh-dep-1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.banner-pic {
-  display: block;
-  width: 100%;
-  height: 300px;
-}
-
-@media screen and (min-width: 780px) {
-  .banner-pic {
-    height: 200px;
+@media screen and (min-width: 768px) {
+  .banner {
+    height: 350px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .banner-pic {
-    height: 160px;
+  .banner {
+    height: 260px;
   }
 }
 
@@ -34,9 +32,9 @@
 }
 
 .banner-info__company-name {
-  color: red;
+  color: #1987ee;
 }
 
 .banner-info__company-info {
-  color: red;
+  color: #000;
 }
